--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Project is ready-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,10 +14,14 @@
 
 <label for="email">Email:</label>
 <input type="email" id="email" name="email"><br>
+
+<input type="submit" value="Submit">
 </form>
 
 <script>
-
+document.getElementById("btn-alert").addEventListener("click", function(){
+alert("Thank you for submitting the form!");});
 </script>
 </body>
 </html>
+<link rel="stylesheet"  type="text/css" href="style.css">
