--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
 <label for="email">Email:</label>
 <input type="email" id="email" name="email"><br>
+
+<input type="submit" value="Submit">
 </form>
 
 <script>
-<link rel="stylesheet"  type="text/css" href="style.css">
+document.getElementById("btn-alert").addEventListener("click", function(){
+alert("Thank you for submitting the form!");});
 </script>
 </body>
 </html>
+<link rel="stylesheet"  type="text/css" href="style.css">
